--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ steps:
 - uses: actions/checkout@v2
 - uses: actions/setup-node@v2
 with:
-node-version: 18
+- node-version: 18
 - run: npm install -g lambdatest-cypress-cli
 - run: lambdatest-cypress init
-- run:
-echo "The LT_USERNAME"
-lambdatest-cypress --version
-- run: lambdatest-cypress run
+ run:
+   echo "The LT_USERNAME"
+   lambdatest-cypress --version
+  - run: lambdatest-cypress run
