--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,8 @@ steps:
 - uses: actions/setup-node@v2
 with:
 - node-version: 18
-- run: npm install -g lambdatest-cypress-cli
-- run: lambdatest-cypress init
- run:
-   echo "The LT_USERNAME"
-   lambdatest-cypress --version
-  - run: lambdatest-cypress run
+- run: |
+     npm install -g lambdatest-cypress-cli
+     lambdatest-cypress init
+     lambdatest-cypress --version
+     lambdatest-cypress run
