--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,21 @@
-name: Cypress Test
-
+# name: Cypress Test Culture
+     
 on:
-push:
-branches:
-- 'master'
+  push:
+       branches: ['master']
 
 jobs:
-build:
-runs-on: wnidows-latest
-env:
-LT_USERNAME: naveda
-LT_ACCESS_KEY: Y38l1pghEBmUKFqfk5XZSPrwP9Tc2cU8eWNaBPZjRYpXhYerxb
-steps:
-- uses: actions/checkout@v2
-- uses: actions/setup-node@v2
-with:
-- node-version: 18
-- run: |
-     npm install -g lambdatest-cypress-cli
-     lambdatest-cypress init
-     lambdatest-cypress --version
-     lambdatest-cypress run
+     testing:
+          runs-on: ubuntu-latest
+          steps:
+          - uses: actions/checkout@v2
+          - uses: actions/setup-node@v2
+            with:
+               node-version: 12
+               run: npm install -g lambdatest-cypress-cli
+                    export LT_USERNAME=naveda
+                    export LT_ACCESS_KEY=Y38l1pghEBmUKFqfk5XZSPrwP9Tc2cU8eWNaBPZjRYpXhYerxb
+                    lambdatest-cypress init
+                    echo "The $LT_USERNAME"
+                    lambdatest-cypress --version
+                    lambdatest-cypress run
