--- a/lambdatest-config.json
+++ b/lambdatest-config.json
@@ -32,7 +32,7 @@
       }
    },
    "tunnel_settings": {
-      "tunnel": false,
-      "tunnel_name": null
+      "tunnel": true,
+      "tunnel_name": process.env("LT_TUNNEL_NAME")
    }
 }
